# first-rust-api

./: Cargo.toml  README.md  Rocket.toml  api-schema.yml  package.json  strong_password.rs  variables_and_printing.rs
ehhhhh/: 1.sql
src/: main.rs  models.rs
templates/: index.html.tera  nonmin.tera
