[package]
name = "firs_rust"
version = "0.1.0"
authors = ["klaus <kodemode@wp.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = [
    "json",
    "diesel_mysql_pool",
    "tera_templates",
] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11.0", features = ["json"] }
diesel = { version = "1.4.0", default-features = false, features = ["mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
